# data-engineering-rust

./: Cargo.toml  README.md
src/: main.rs  read_csv_fusion_example.rs
